--- a/src/app/components/app-shell/app-shell.component.scss
+++ b/src/app/components/app-shell/app-shell.component.scss
@@ -25,6 +25,12 @@
   display: none;
 }
 
+.logo {
+  padding: 0.5rem;
+  background: sandybrown;
+  border-radius: 50%;
+}
+
 .logo-text {
   text-transform: initial;
 }
