--- a/src/app/components/readings/readings.component.scss
+++ b/src/app/components/readings/readings.component.scss
@@ -1,7 +1,14 @@
+.wrapper {
+  width: 75%;
+  margin: 0 auto;
+}
+
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 3fr;
+  // grid-template-columns: 1fr 1fr 3fr;
+  grid-template-columns: 1fr 3fr;
   grid-gap: 5rem;
+  // width: 70%;
 }
 
 .current-reading {
@@ -27,6 +34,9 @@
 
   .current-reading {
     border-top: 0.5px #999 solid;
-    padding-top: 1rem;
+    padding-top: 2rem;
+
+    height: initial;
+    overflow-y: initial;
   }
 }
