--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,14 +1,18 @@
 <section class="profile-section">
-  <img class="profile-image" [src]="user.photoURL" alt="profile picture">
+  <div class="heading heading-bottom-margin">{{user.fullName}}</div>
+  <img class="profile-image shadow" [src]="user.photoURL" alt="profile picture">
   <div class="profile-details">
-    <div class="master-data">{{user.fullName}}, {{user.country}}</div>
+    <div class="info-pair">
+        <span class="info-pair--property">Country</span>
+        <span>{{user.country}}</span>
+      </div>
     <div class="info-pair">
       <span class="info-pair--property">Favorite Book</span>
       <span>{{user.favoriteBook}}</span>
     </div>
     <div class="info-pair">
       <span class="info-pair--property">Favorite Quote</span>
-      <span>I just don't care</span>
+      <span>Jodling is not only for sinners</span>
     </div>
   </div>
   <button (click)="edit.emit()" mat-button mat-raised-button color="secondary">
