--- a/src/app/components/reader-card/reader-card.component.html
+++ b/src/app/components/reader-card/reader-card.component.html
@@ -1,4 +1,4 @@
-<div class="reader shadow" (click)="gotoReader(reader.uid)">
+<div *ngIf="!!reader" class="reader shadow" (click)="gotoReader(reader.uid)">
 
   <img class="reader__image shadow" [src]="reader.photoURL" alt="">
 
@@ -6,17 +6,17 @@
 
     <div class="info-pair">
       <span class="info-pair--property">Country</span>
-      <span>{{reader.country}}</span>
+      <span>{{reader.country | defaultValue}}</span>
     </div>
    
     <div class="info-pair">
       <span class="info-pair--property">Favorite Book</span>
-      <span>{{reader.favoriteBook}}</span>
+      <span>{{reader.favoriteBook | defaultValue}}</span>
     </div>
  
     <div class="info-pair">
       <span class="info-pair--property">Favorite Quote</span>
-      <span>Jodling is great</span>
+      <span>{{reader.favoriteqoute | defaultValue}}</span>
     </div>
 
   </div>
