--- a/src/app/components/reading-detail/reading-detail.component.html
+++ b/src/app/components/reading-detail/reading-detail.component.html
@@ -33,8 +33,8 @@
       </div>
     </div>
 
-    <div class="reading-header--controls">
-      <mat-checkbox>Private</mat-checkbox>
+    <div *ngIf="isOwner" class="reading-header--controls">
+      <mat-checkbox  [checked] = "reading.isPrivate" (change)="togglePrivate()">Private</mat-checkbox>
     </div>
 
   </div>
