--- a/src/app/components/readings-list/readings-list.component.html
+++ b/src/app/components/readings-list/readings-list.component.html
@@ -1,26 +1,31 @@
 <div *ngIf="!!readings" class="readings-section">
 
-  <div class="header-readings heading-bottom-margin">
+  <div class="readings-column-header heading-bottom-margin">
     <div class="heading">Readings</div>
-    <a *ngIf="isOwner" [routerLink]="['app/search-book']" class="new-reading">
+    <a *ngIf="isOwner" [routerLink]="['app/search-book']" class="action-buttom">
       NEW
       <i class="fas fa-plus-circle"></i>
     </a>
   </div>
 
-  <div class="reading shadow" [ngClass]="{'reading__active': current?.id === reading.id}" *ngFor="let reading of readings"
-    (click)="!isDeleting ? selectReading.emit(reading) : null">
+  <div *ngFor="let reading of readings" (click)="!isDeleting ? selectReading.emit(reading) : null">
 
-    <div class="book-info">
-      <span class="title">{{reading.book.title}}</span>
-      <span class="author">{{reading.book.author}}</span>
-      <div *ngIf="isOwner" class="tooltip">
-        <i (click)="isDeleting = true; delete(reading)" class="delete clickable far fa-trash-alt"></i>
-        <span class="tooltiptext">Delete Reading</span>
+    <div class="reading shadow" *ngIf="!reading.isPrivate || isOwner" 
+    [ngClass]="{'reading__active': currentReading?.id === reading.id}">
+      
+      <div class="book-info">
+        <span class="title">{{reading.book.title}}</span>
+        <span class="author">{{reading.book.author}}</span>
+        <div *ngIf="isOwner" class="tooltip">
+          <i (click)="isDeleting = true; delete(reading)" class="delete clickable far fa-trash-alt"></i>
+          <span class="tooltiptext">Delete Reading</span>
+        </div>
       </div>
+
+      <img [src]="reading.book.imageUrl" alt="book cover">
+
     </div>
 
-    <img [src]="reading.book.imageUrl" alt="book cover">
 
   </div>
 
