--- a/src/app/components/readings/readings.component.html
+++ b/src/app/components/readings/readings.component.html
@@ -1,14 +1,30 @@
 <div class="wrapper">
   <div class="grid">
 
-    <!-- <lr-user *ngIf="auth.user$ | async as user" [user]="user" (edit)="editProfile($event)"></lr-user> -->
+    <div class="reader-section">
 
-    <lr-readings-list *ngIf="!!readings" [isOwner]="isOwner" [readings]="readings" [currentReading]="currentReading" (deleteReading)="deleteReading($event)"
-      (selectReading)="selectReading($event)">
-    </lr-readings-list>
+      <div class="reader-section__reader" *ngIf="!!reader">
+        
+        <div class="readings-column-header heading-bottom-margin">
+          <div class="heading">{{reader.fullName || reader.displayName }}</div>
+          <a *ngIf="isOwner" (click)="editProfile(reader)" class="action-buttom">
+            EDIT
+            <i class="fas fa-user-edit"></i>
+          </a>
+        </div>
+
+        <lr-reader-card [reader]="reader"></lr-reader-card>
+      </div>
+
+      <lr-readings-list *ngIf="!!readings" [isOwner]="isOwner" [readings]="readings" [currentReading]="currentReading" (deleteReading)="deleteReading($event)"
+        (selectReading)="selectReading($event)">
+      </lr-readings-list>
+
+    </div>
 
     <div *ngIf="!!currentReading" class="current-reading">
-      <lr-reading-detail *ngIf="!!currentReading" [isOwner]="isOwner" [reading]="currentReading" (deleteNote)="deleteNote($event)" (updateReading)="updateReading($event)">
+      <lr-reading-detail [isOwner]="isOwner" [reading]="currentReading" (deleteNote)="deleteNote($event)"
+        (updateReading)="updateReading($event)">
       </lr-reading-detail>
     </div>
 
