--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,14 +21,14 @@ body {
 }
 
 .info-pair {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.7rem;
 }
 
 .info-pair--property {
-    font-size: 0.7rem;
-    color: rgba(0, 0, 0, 0.5);
+  font-size: 0.7rem;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .tooltip .tooltiptext {
@@ -62,4 +62,16 @@ a {
 
 .shadow {
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
+}
+
+.action-buttom {
+  padding: 0.4rem;
+  background: tomato;
+  border-radius: 4px;
+}
+
+.readings-column-header {
+  display: flex;
+  justify-content: space-between;
+  width: 320px;
 }
