--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ body {
 .container {
   max-width: 90%;
   overflow: hidden;
-  margin: 6.5rem auto 0 auto;
+  margin: 5.5rem auto 0 auto;
 }
 
 .clickable:hover {
@@ -65,9 +65,9 @@ a {
 }
 
 .action-buttom {
-  padding: 0.4rem;
-  background: tomato;
-  border-radius: 4px;
+  padding: 0.5rem;
+  background: sandybrown;
+  border-radius: 50%;
 }
 
 .readings-column-header {
