--- a/src/app/components/readings-list/readings-list.component.html
+++ b/src/app/components/readings-list/readings-list.component.html
@@ -3,7 +3,6 @@
   <div class="readings-column-header heading-bottom-margin">
     <div class="heading">Readings</div>
     <a *ngIf="isOwner" [routerLink]="['app/search-book']" class="action-buttom">
-      NEW
       <i class="fas fa-plus-circle"></i>
     </a>
   </div>
@@ -11,7 +10,7 @@
   <div *ngFor="let reading of readings" (click)="!isDeleting ? selectReading.emit(reading) : null">
 
     <div class="reading shadow" *ngIf="!reading.isPrivate || isOwner" 
-    [ngClass]="{'reading__active': currentReading?.id === reading.id}">
+    [ngClass]="{'reading__active': !!currentReading && currentReading?.id === reading.id}">
       
       <div class="book-info">
         <span class="title">{{reading.book.title}}</span>
