look ahead search + refactoring

--- a/src/app/components/book-search/book-search.component.html
+++ b/src/app/components/book-search/book-search.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="bookData">
   <div class="center">
     <mat-form-field>
-      <input type="search" [(ngModel)]='searchTerm' matInput placeholder="Search book" (keyup.enter)="search()">
-      <button mat-button *ngIf="searchTerm" matSuffix mat-icon-button aria-label="Clear" (click)="searchTerm=''">
+      <input #term matInput placeholder="Search book" (keyup)="subject$.next(term.value)">
+      <button mat-button *ngIf="term" matSuffix mat-icon-button aria-label="Clear" (click)="term.value=''">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
