--- a/src/app/components/reading-detail/reading-detail.component.html
+++ b/src/app/components/reading-detail/reading-detail.component.html
@@ -5,10 +5,10 @@
 
     <div class="reading-header">
 
-      <div class="reading-header--book shadow">
+      <div class="reading-header__book shadow">
 
         <div>
-          <img class="shadow book--image__is-mobile" [src]="reading.book.imageUrl" alt="">
+          <img class="shadow" [src]="reading.book.imageUrl" alt="">
         </div>
 
         <div>
