--- a/src/app/components/readings-list/readings-list.component.html
+++ b/src/app/components/readings-list/readings-list.component.html
@@ -3,7 +3,7 @@
   <div class="readings-column-header heading-bottom-margin">
     <div class="heading">Readings</div>
     <a *ngIf="isOwner" [routerLink]="['app/search-book']" class="action-buttom">
-      <i class="fas fa-plus-circle"></i>
+      New&nbsp;<i class="fas fa-plus-circle"></i>
     </a>
   </div>
 
