--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,9 +65,9 @@ a {
 }
 
 .action-buttom {
-  padding: 0.5rem;
-  background: sandybrown;
-  border-radius: 50%;
+  padding: 0.4rem;
+  background: tomato;
+  border-radius: 3px;
 }
 
 .readings-column-header {
