--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,20 +1,28 @@
-<section class="profile-section">
-  <div class="heading heading-bottom-margin">{{user.fullName}}</div>
-  <img class="profile-image shadow" [src]="user.photoURL" alt="profile picture">
-  <div class="profile-details">
+<section *ngIf="!!reader" class="profile-section">
+  <!-- <div class="heading heading-bottom-margin">Reader</div> -->
+  <img class="profile-image shadow" [src]="reader.photoURL" alt="profile picture">
+  <div>by {{reader.fullName}}</div>
+
+
+
+
+
+
+
+  <!-- <div class="profile-details">
     <div class="info-pair">
         <span class="info-pair--property">Country</span>
-        <span>{{user.country}}</span>
+        <span>{{reader.country}}</span>
       </div>
     <div class="info-pair">
       <span class="info-pair--property">Favorite Book</span>
-      <span>{{user.favoriteBook}}</span>
+      <span>{{reader.favoriteBook}}</span>
     </div>
     <div class="info-pair">
       <span class="info-pair--property">Favorite Quote</span>
-      <span>Jodling is not only for sinners</span>
+      <span>Jodling is not</span>
     </div>
   </div>
   <button (click)="edit.emit()" mat-button mat-raised-button color="secondary">
-    <i class="fas fa-user-edit"></i>&nbsp;&nbsp;Edit Profile</button>
+    <i class="fas fa-user-edit"></i>&nbsp;&nbsp;Edit Profile</button> -->
 </section>
